# Data-Structures-and-Algorithms

A1-Stack/: CMakeLists.txt  ExtendedTest.cpp  ShortTest.cpp  Stack.cpp  Stack.h  main.cpp
A2-Set/: CMakeLists.txt  ExtendedTest.cpp  Set.cpp  Set.h  SetIterator.cpp  SetIterator.h  ShortTest.cpp  main.cpp
A3-IndexedList/: CMakeLists.txt  ExtendedTest.cpp  IndexedList.cpp  IndexedList.h  ListIterator.cpp  ListIterator.h  ShortTest.cpp  ShortTest.h  main.cpp
A4-Matrix/: CMakeLists.txt  ExtendedTest.cpp  Matrix.cpp  Matrix.h  ShortTest.cpp  main.cpp
A5-SortedMap/: CMakeLists.txt  ExtendedTest.cpp  SMIterator.cpp  SMIterator.h  ShortTest.cpp  SortedMap.cpp  SortedMap.h  main.cpp
